--- a/scss/components/component-search-modal.scss
+++ b/scss/components/component-search-modal.scss
@@ -9,7 +9,7 @@
     max-height: 100vh;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
-    display: block;
+    display: none;
 }
 
 .search-modal__full {
