--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -213,3 +213,39 @@ thead {
     text-transform: uppercase;
     font-family: var(--america-mono-font);
 }
+
+.card-product__price {
+    margin-bottom: 1rem;
+    .price__item--sale {
+        color: var(--color-black);
+    }
+    .price__box {
+        display: flex;
+        align-items: center;
+    }
+    .price__item {
+        display: inline-block;
+        padding-right: .4rem;
+    }
+    &.price--on-sale {
+        .price__item--regular {
+            color: var(--color-black);
+            opacity: .7;
+        }
+        .price__item--sale {
+            color: var(--color-danger);
+        }
+        .badge.sale {
+            display: inline-block;
+        }
+    }
+
+    .badge.sale {
+        font-size: 1.1rem;
+        padding: .3rem .6rem;
+        display: none;
+        border-color: var(--color-danger);
+        background-color: var(--color-danger);
+        color: var(--color-white);
+    }
+}
