--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -20,24 +20,24 @@ h5,
 }
 
 .hxl {
-    font-size: calc(var(--font-heading-scale) * 5rem);
+    font-size: calc(var(--font-heading-scale) * 4.4rem);
     margin-bottom: 4rem;
 }
 
 @media only screen and (min-width: 750px) {
     .hxl {
-        font-size: calc(var(--font-heading-scale) * 6.2rem);
+        font-size: calc(var(--font-heading-scale) * 5rem);
     }
 }
 
 .h0 {
-    font-size: calc(var(--font-heading-scale) * 4rem);
+    font-size: calc(var(--font-heading-scale) * 3.4rem);
     margin-bottom: 4rem;
 }
 
 @media only screen and (min-width: 750px) {
     .h0 {
-        font-size: calc(var(--font-heading-scale) * 5.2rem);
+        font-size: calc(var(--font-heading-scale) * 4rem);
     }
 }
 
@@ -45,13 +45,13 @@ h1,
 .h1 {
     font-size: calc(var(--font-heading-scale) * 3rem);
     text-transform: uppercase;
-    margin-bottom: 3rem;
+    margin-bottom: 2.8rem;
 }
 
 @media only screen and (min-width: 750px) {
     h1,
     .h1 {
-        font-size: calc(var(--font-heading-scale) * 4rem);
+        font-size: calc(var(--font-heading-scale) * 3rem);
     }
 }
 
@@ -108,10 +108,11 @@ h5,
 
 h6,
 .h6 {
-    color: rgba(var(--color-dark), 0.75);
+    color: var(--color-black);
     margin-block-start: 1.67em;
     margin-block-end: 1.67em;
     margin-bottom: 1rem;
+    font-size: calc(var(--font-heading-scale) * 1.2rem);
 }
 
 .font-large {
@@ -154,10 +155,11 @@ caption,
 /* Utility */
 
 .utility {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     line-height: 1;
     letter-spacing: .1rem;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 /* rte */
