--- a/scss/components/component-mega-menu.scss
+++ b/scss/components/component-mega-menu.scss
@@ -29,6 +29,7 @@
         transition-property: visibility, opacity, margin;
         transition-duration: 0.3s;
         z-index: 1;
+        box-shadow:0 .4rem .5rem rgba(0,0,0,.1); 
     }
 
     .mega-menu {
@@ -83,12 +84,22 @@
 
     .mega-menu__column-menu {
         display: flex;
-        width: calc(100% - 25rem);
+        width: calc(100% - 44rem);
+        &.product-empty {
+            width: 100%;
+        }
     }
 
     .mega-menu__list-column-title {
         margin-top: 0;
-        margin-bottom: 2.5rem;
+        margin-bottom: 1.5rem;
+        a {
+            text-decoration: none;
+        }
+    }
+
+    .mega-menu__media {
+        margin-bottom: 1rem;
     }
 
     .mega-menu__list-column + .mega-menu__list-column {
@@ -107,6 +118,11 @@
         min-width: 100%;
     }
 
+    .mega-menu__list-item,
+    .simple-menu__list-item {
+        position: relative;
+    }
+
     .mega-menu__list-item + .mega-menu__list-item,
     .simple-menu__list-item + .simple-menu__list-item {
         margin-top: 1rem;
@@ -119,9 +135,10 @@
     .mega-menu__list-item-link,
     .simple-menu__list-item-link {
         text-transform: none;
-        font-size: 1.2rem;
+        font-size: 1.3rem;
         line-height: 2rem;
         display: inline-block;
+        text-decoration: none;
     }
 
     .has-sub-menu .header__menu-item-summary > a {
@@ -137,7 +154,7 @@
         position: relative;
     }
 
-    .header__menu-item-link .icon {
+    .header__menu--main .header__menu-item-link .icon {
         width: 1rem;
         position: absolute;
         top: 50%;
@@ -145,22 +162,28 @@
         transform: translate(0, -50%);
     }
 
-    .mega-menu__list-badge {
+    .mega-menu__list-badge,
+    .simple-menu__list-badge {
         font-size: 1.2rem;
-        line-height: 1.6rem;
+        line-height: 1.4rem;
+        min-height: 1.8rem;
         text-decoration: none;
         margin-left: .4rem;
         color: var(--header-badge-color);
-        border-radius: .3rem;
+        border-radius: 0;
         padding: .1rem .4rem;
-        float: right;
+        position: absolute;
+        right: 0;
+        top: 0;
     }
 
     .mega-menu__column-image {
-        position: relative;
-        max-width: 58rem;
-        width: 50%;
-        height: inherit;
+        position: absolute;
+        max-width: 70rem;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        right: 0;
     }
 
     .mega-menu__image {
@@ -285,10 +308,12 @@
     color: var(--footer-text-color);
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
+    text-transform: none;
+    opacity: .7;
 }
 
 .mega-menu-product-post__title {
-    margin-bottom: 0;
+    margin-bottom: 1rem;
 }
 
 .mega-menu-product-post__title a {
