--- a/scss/components/component-mobile-menu.scss
+++ b/scss/components/component-mobile-menu.scss
@@ -29,7 +29,7 @@
         display: inline-block;
     }
 
-    .header__menu--mobile,
+    .header__menu--main,
     .header__menu-item-text {
         display: none;
     }
@@ -56,7 +56,7 @@
         transform: translate(32rem,0);
     }
   
-    .header__menu--mobile {
+    .header__menu--main {
         padding: 0;
         margin: 0;
         background: var(--header-background-color);
@@ -76,7 +76,7 @@
         height: calc(var(--viewport-height, 100vh) - (var(--header-bottom-position, 100%)));*/
     }
   
-    .header__menu--mobile.menu-opening {
+    .header__menu--main.menu-opening {
         visibility: visible;
         transform: translate(0,0);
     }
