--- a/snippets/header-search.liquid
+++ b/snippets/header-search.liquid
@@ -4,113 +4,108 @@
 <script src='{{ 'header-search.js' | asset_url }}' defer='defer'></script>
 <script src='{{ 'component-tabs.js' | asset_url }}' defer='defer'></script>
 
-<details-modal class='header__search search_wrapper'>
-    <details>
-        <summary class='search-modal__toggle focus-inset' aria-haspopup='dialog'>
-            <span>
-                <a class='search-modal__toggle-open focus-inset header__menu-item-link'>
-                    <i class='fa fa-search' aria-hidden='true'></i>
-                    <span class='header__menu-item-text'>{{ 'sections.search.search' | t }}</span>
-                </a>
-            </span>
-        </summary>
-        <div class='search-modal' role='dialog' aria-modal='true' aria-label='{{ 'sections.search.search' | t }}'>
-            <div class='search-modal__content page-width' tabindex='-1'>
-                <header-search>
-                    <form action='{{ routes.search_url }}' method='get' role='search' class='search search-modal__form'>
-                        <div class='search-modal__focusable'>
-                            <div class='field search-modal__field'>
-                                <input
-                                    class='search-modal__input'
-                                    id='SearchInModal'
-                                    type='search'
-                                    name='q'
-                                    autocorrect='off'
-                                    value=''
-                                    autocomplete='off'
-                                    placeholder='{{ 'sections.search.placeholder' | t }}'
-                                >
-                                <button
-                                    type='button'
-                                    class='search-modal__close-button link focus-inset'
-                                    aria-label='{{ 'accessibility.close' | t }}'
-                                >
-                                    {% render 'icon-close' %}
-                                </button>
-                            </div>
+<div class='header__search search_wrapper'>
+    <a href='#' class='search-modal__toggle-open focus-inset header__menu-item-link'>
+        <i class='icon an an-search-l' aria-hidden='true'></i>
+        <span class='header__menu-item-text'>{{ 'sections.search.search' | t }}</span>
+    </a>
 
-                            <div class='suggestions'>
-                                {% comment %} Suggested Terms {% endcomment %}
-                                {% assign suggested_terms = blocks | where: 'type', 'suggested_term' %}
-                                {% if suggested_terms.size > 0 %}
-                                    <div class='suggestions__title'>{{ 'sections.search.suggestions' | t }}</div>
-                                    <ul class='search-modal__suggested'>
-                                        <li>{{ 'sections.search.suggestions' | t }}</li>
-                                        {% for term in suggested_terms %}
-                                            {% if term.settings.suggested_term != blank %}
-                                                <li>
-                                                    <button
-                                                        type='button'
-                                                        data-term='{{ term.settings.suggested_term }}'
-                                                    >
-                                                        {{ term.settings.suggested_term }}
-                                                    </button>
-                                                </li>
-                                            {% endif %}
-                                        {% endfor %}
-                                    </ul>
-                                {% endif %}
+    <div class='search-modal' role='dialog' aria-modal='false' aria-label='{{ 'sections.search.search' | t }}'>
+        <div class='search-modal__content page-width' tabindex='-1'>
+            <header-search>
+                <form action='{{ routes.search_url }}' method='get' role='search' class='search search-modal__form'>
+                    <div class='search-modal__focusable'>
+                        <div class='field search-modal__field'>
+                            <input
+                                class='search-modal__input'
+                                id='SearchInModal'
+                                type='search'
+                                name='q'
+                                autocorrect='off'
+                                value=''
+                                autocomplete='off'
+                                placeholder='{{ 'sections.search.placeholder' | t }}'
+                            >
+                            <button
+                                type='button'
+                                class='search-modal__close-button link focus-inset'
+                                aria-label='{{ 'accessibility.close' | t }}'
+                            >
+                                {% render 'icon-close' %}
+                            </button>
+                        </div>
 
-                                {% comment %} Suggested Links {% endcomment %}
-                                {% assign suggested_links = blocks | where: 'type', 'suggested_link' %}
-                                {% if suggested_links.size > 0 %}
-                                    <div class='search-modal__links'>
-                                        {% for link in suggested_links %}
-                                            {% liquid
-                                                assign image = link.settings.suggested_link_image
-                                                assign url = link.settings.suggested_link
-                                                assign text = link.settings.suggested_text
-                                            %}
-                                            <a href='{{ url }}' class='search-modal__item'>
-                                                <div class='search-modal__media'>
-                                                    {% if link.settings.suggested_link_image != blank %}
-                                                        {% render 'image',
-                                                            image_box: image,
-                                                            image_box_class: 'search-modal__image'
-                                                        %}
-                                                    {% endif %}
-                                                </div>
-                                                {% if text != blank %}
-                                                    <span class='h4'>
-                                                        {{ text }}
-                                                    </span>
+                        <div class='suggestions'>
+                            {% comment %} Suggested Terms {% endcomment %}
+                            {% assign suggested_terms = blocks | where: 'type', 'suggested_term' %}
+                            {% if suggested_terms.size > 0 %}
+                                <div class='suggestions__title'>{{ 'sections.search.suggestions' | t }}</div>
+                                <ul class='search-modal__suggested'>
+                                    <li>{{ 'sections.search.suggestions' | t }}</li>
+                                    {% for term in suggested_terms %}
+                                        {% if term.settings.suggested_term != blank %}
+                                            <li>
+                                                <button
+                                                    type='button'
+                                                    data-term='{{ term.settings.suggested_term }}'
+                                                >
+                                                    {{ term.settings.suggested_term }}
+                                                </button>
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+
+                            {% comment %} Suggested Links {% endcomment %}
+                            {% assign suggested_links = blocks | where: 'type', 'suggested_link' %}
+                            {% if suggested_links.size > 0 %}
+                                <div class='search-modal__links'>
+                                    {% for link in suggested_links %}
+                                        {% liquid
+                                            assign image = link.settings.suggested_link_image
+                                            assign url = link.settings.suggested_link
+                                            assign text = link.settings.suggested_text
+                                        %}
+                                        <a href='{{ url }}' class='search-modal__item'>
+                                            <div class='search-modal__media'>
+                                                {% if link.settings.suggested_link_image != blank %}
+                                                    {% render 'image',
+                                                        image_box: image,
+                                                        image_box_class: 'search-modal__image'
+                                                    %}
                                                 {% endif %}
-                                            </a>
-                                        {% endfor %}
-                                    </div>
-                                {% endif %}
-                            </div>
+                                            </div>
+                                            {% if text != blank %}
+                                                <span class='h4'>
+                                                    {{ text }}
+                                                </span>
+                                            {% endif %}
+                                        </a>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
                         </div>
-                        <div class='results'>
-                            <div class='header-search__loading-state'>
-                                <svg
-                                    aria-hidden='true'
-                                    focusable='false'
-                                    role='presentation'
-                                    class='spinner'
-                                    viewBox='0 0 66 66'
-                                    xmlns='http://www.w3.org/2000/svg'
-                                >
-                                    <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
-                                </svg>
-                            </div>
+                    </div>
+                    <div class='results'>
+                        <div class='header-search__loading-state'>
+                            <svg
+                                aria-hidden='true'
+                                focusable='false'
+                                role='presentation'
+                                class='spinner'
+                                viewBox='0 0 66 66'
+                                xmlns='http://www.w3.org/2000/svg'
+                            >
+                                <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
+                            </svg>
                         </div>
-                    </form>
-                </header-search>
-            </div>
+                    </div>
+                </form>
+            </header-search>
         </div>
-        <div class='search-modal__overlay'>
-            <span class='visually-hidden'>{{ 'accessibility.close' | t }}</span>
-        </div>
-    </details>
-</details-modal>
+    </div>
+    <div class='search-modal__overlay'>
+        <span class='visually-hidden'>{{ 'accessibility.close' | t }}</span>
+    </div>
+</div>
